samples/_failures_safe/1760884829_768c9d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_db3b6e08.c: In function ‘main’:
./samples/SAFE/__tmp_db3b6e08.c:140:9: error: expected declaration or statement at end of input
  140 |         choice = read_int("Enter your choice (1-4): ", 1, 4);
      |         ^~~~~~
./samples/SAFE/__tmp_db3b6e08.c:140:9: error: expected declaration or statement at end of input
